Do some changes in WordInfo structure. Change field senseItems from single instance to list ot instances